--- a/app/src/main/res/layout/activity_input.xml
+++ b/app/src/main/res/layout/activity_input.xml
@@ -1,24 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:layout_margin="4dp"
     android:padding="6dp"
-    tools:context=".InputActivity">
+    tools:context=".View.InputActivity">
 
     <EditText
         android:id="@+id/edt_input_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:autofillHints="@string/name"
         android:hint="@string/name"
         android:background="@drawable/background_input_text"
         android:padding="10dp"
         android:drawablePadding="4dp"
         android:layout_marginBottom="4dp"
-        android:drawableStart="@drawable/ic_baseline_person"/>
+        android:drawableStart="@drawable/ic_baseline_person"
+        android:inputType="textPersonName"/>
 
     <EditText
         android:id="@+id/edt_input_phone_number"
@@ -29,7 +30,9 @@
         android:padding="10dp"
         android:drawablePadding="4dp"
         android:layout_marginBottom="4dp"
-        android:drawableStart="@drawable/ic_baseline_phone"/>
+        android:drawableStart="@drawable/ic_baseline_phone"
+        android:autofillHints="@string/phone_number"
+        android:inputType="phone"/>
 
     <EditText
         android:id="@+id/edt_input_address"
@@ -40,7 +43,9 @@
         android:padding="10dp"
         android:drawablePadding="4dp"
         android:layout_marginBottom="4dp"
-        android:drawableStart="@drawable/ic_baseline_home"/>
+        android:drawableStart="@drawable/ic_baseline_home"
+        android:autofillHints="@string/address"
+        android:inputType="text"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -53,7 +58,8 @@
             android:layout_height="wrap_content"
             android:text="@string/save"
             android:backgroundTint="#67CD6B"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            style="?android:attr/buttonBarButtonStyle"/>
 
         <Button
             android:id="@+id/btn_cancel"
@@ -61,7 +67,8 @@
             android:layout_height="wrap_content"
             android:text="@string/cancel"
             android:layout_weight="1"
-            android:backgroundTint="#FA6666"/>
+            android:backgroundTint="#FA6666"
+            style="?android:attr/buttonBarButtonStyle"/>
 
     </LinearLayout>
 
